public/css/utils.css
/* credit: https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
  width: 1px;
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
}

.font-mono {
  font-family: var(--font-family-monospace);
}

/* credit: https://codepen.io/maddesigns/pen/rOMgpQ/ */
.full-viewport-width {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

.button {
  display: inline-block;
  inline-size: fit-content;
  touch-action: manipulation;
  user-select: none;
  padding: 0.75rem 1.75rem;
  background-color: var(--color-accent);
  color: var(--color-white);
  font-weight: bold;
  border: 2px solid transparent;
  border-radius: var(--border-radius);
  text-align: center;
  text-decoration: none;
  line-height: 1;
  cursor: pointer;
  transition:
    color ease-in .2s,
    background-color ease-in .2s;
}

.button:visited {
  color: var(--color-white);
}

.button:hover {
  color: var(--color-accent);
  background-color: var(--background-color);
  border: 2px solid var(--color-accent);
}

.button:active {
  color: var(--color-accent-secondary);
}

.button:focus-visible {
  outline: 3px solid var(--background-color);
  box-shadow: var(--focus-style-button-box-shadow);
}

